Bug 338816 - Calligra Sheets no shows hidden rows
Summary: Calligra Sheets no shows hidden rows
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-05 06:15 UTC by Brallan Aguilar
Modified: 2020-06-15 09:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.2
Sentry Crash Report:


Attachments
File where the bug is (6.13 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-09-05 06:16 UTC, Brallan Aguilar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brallan Aguilar 2014-09-05 06:15:01 UTC
I selected some continuous rows and I hidden them. But when I want to show them, I go to Format, Row, show rows and select ones, however they aren't unhidden.

Reproducible: Always
Comment 1 Brallan Aguilar 2014-09-05 06:16:28 UTC
Created attachment 88571 [details]
File where the bug is
Comment 2 Brallan Aguilar 2014-09-05 06:18:56 UTC
Comment on attachment 88571 [details]
File where the bug is

Firstly I create the .ods with LibreOffice and I eddited it with Sheets. I hid the rows with Sheets.
Comment 3 Andrew Crouthamel 2018-11-12 02:46:07 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Andrew Crouthamel 2018-11-21 04:20:31 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Dag Andersen 2020-06-11 08:54:34 UTC
Git commit 28920c50e6300d643477f256aba91c8c51836682 by Dag Andersen.
Committed on 11/06/2020 at 08:43.
Pushed by danders into branch 'sheets_hideshow_rows'.

Make show hidden row(s) work

Check for hidden rows was inverted to check for shown rows,
hence hidden rows would never be unhidden.
Related: bug 354236
FIXED-IN:3.2.2

M  +1    -1    sheets/commands/RowColumnManipulators.cpp

https://invent.kde.org/office/calligra/commit/28920c50e6300d643477f256aba91c8c51836682
Comment 6 Dag Andersen 2020-06-15 09:18:26 UTC
Git commit 22e02998dec8af15a25b7e8e3d53c174810cc3be by Dag Andersen.
Committed on 15/06/2020 at 06:54.
Pushed by danders into branch 'master'.

Make show hidden row(s) work

Check for hidden rows was inverted to check for shown rows,
hence hidden rows would never be unhidden.
Related: bug 354236
FIXED-IN:3.2.2
(cherry picked from commit 28920c50e6300d643477f256aba91c8c51836682)

M  +1    -1    sheets/commands/RowColumnManipulators.cpp

https://invent.kde.org/office/calligra/commit/22e02998dec8af15a25b7e8e3d53c174810cc3be