Make show hidden row(s) work

Check for hidden rows was inverted to check for shown rows,
hence hidden rows would never be unhidden.

BUG:338816
BUG:354236
FIXED-IN:3.2.2
(cherry picked from commit 28920c50e6300d643477f256aba91c8c51836682)